--- a/src/task3.html
+++ b/src/task3.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 3</title>
+    <link href="./styles.scss" rel="stylesheet">
 </head>
 
 <body>
